2000-05-17 21:16:54  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-mode-map): Add M-SPACE.
	* mml.el (mml-mode-map): Comment out mml-narrow-to-part.

2000-05-17 21:13:38 Jim Davidson <jdavidson@acm.org>

	* gnus-sum.el (gnus-summary-save-article-rmail): Use
	gnus-summary-save-in-rmail.
	* message.el (message-output): Ditto.

2000-05-17 22:37:25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-emphasize-whitespace-regexp): Doc fix.
	
2000-05-17 14:03:49  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* rfc2047.el (rfc2047-encode-message-header): Encode if the method
	is a charset.
	* message.el (message-send-news): Check group name charset.
	* gnus-msg.el (gnus-post-news): Decode group name.
	(gnus-inews-do-gcc): Encode group name.

2000-05-17 10:16:32  Karl Kleinpaste <karl@charcoal.com>

	* gnus-art.el (gnus-emphasize-whitespace-regexp): New variable.
	* gnus-util.el (gnus-put-text-property-excluding-newlines): Use it.

2000-05-17 02:25:11  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-mark-line-p): New function.
	(gnus-group-goto-group): New parameter.
	(gnus-group-remove-mark): Use it.
	* gnus-topic.el (gnus-topic-move-group): Ditto.
	(gnus-topic-remove-group): Ditto.

2000-05-17 00:49:09  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-list-dormant): New function.

2000-05-16 23:20:42  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el (gnus-agent-synchronize): Use
	nnheader-insert-file-contents.
	(gnus-agent-save-active-1): Ditto.
	(gnus-agent-write-active): Ditto.
	(gnus-agent-expire): Ditto.
	* gnus-cache.el (gnus-cache-read-active): Ditto.
	* gnus-start.el (gnus-master-read-slave-newsrc): Ditto.
	* gnus-sum.el (gnus-summary-import-article): Ditto.
	
	* gnus-agent.el (gnus-agent-write-servers): Bind coding-system.
	(gnus-agent-save-group-info): Ditto.
	(gnus-agent-save-alist): Ditto.
	* gnus-util.el (gnus-make-directory): Ditto.
	