@@ -137,7 +137,8 @@ The function is called with one parameter, which is the generated part.")
 		  (setq charsets (delq nil charsets))
 		(setq warn nil))
 	    (error "Edit your message to remove those characters")))
-	(if (< (length charsets) 2)
+	(if (or (eq 'mml (car tag))
+		(< (length charsets) 2))
 	    (if (or (not no-markup-p)
 		    (string-match "[^ \t\r\n]" contents))
 		;; Don't create blank parts.
