@@ -1,3 +1,13 @@
+2000-05-19 01:45:40  Shenghuo ZHU  <zsh@cs.rochester.edu>
+
+	* mml.el (mml-parse-1): Don't test multiple-charsets within mml tag.
+
+2000-05-18  Dave Love  <fx@gnu.org>
+
+	* gnus-art.el: Use defalias, not fset.
+	(gnus-article-x-face-command): Don't test for xbm.
+	(gnus-article-next-page): Redisplay before testing point in window.
+
 2000-05-17 21:16:54  Shenghuo ZHU  <zsh@cs.rochester.edu>
 
 	* gnus-group.el (gnus-group-mode-map): Add M-SPACE.
